--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "typescript": "^4.4.2"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,tsx}": "eslint \"**/*.{js,ts,tsx}\" --cache --fix"
   }
 }
