--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
         "svg": "always"
       }
     ],
-    "import/no-extraneous-dependencies": ["error", {"packageDir": ["./apps/server", "./packages/model"]}],
+    "import/no-extraneous-dependencies": ["error", {"packageDir": ["./apps/server", "./apps/web_react" , "./packages/model"]}],
     "import/no-unresolved": 0,
     "react/jsx-wrap-multilines": 0,
     "object-curly-newline": 0,
@@ -54,7 +54,8 @@
     "react/require-default-props": 0,
     "no-param-reassign": 0,
     "class-methods-use-this": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "react/jsx-one-expression-per-line": 0
   },
   // "settings": {
   //   "import/parsers": {
