--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,6 +23,11 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "module-alias": "^2.2.2",
+    "tsconfig-paths": "^3.14.1"
+  },
+  "moduleNameMapper": {
+    "@constants/(.*)": "./src/constants/$1"
   }
 }
