--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "paths": {
-            "@*": ["src/*"],
+            // "@*": ["./src/*"],
             "@drop-ball/*": ["../../packages/*"]
           },
         "baseUrl": ".",
