--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     ],
     "nohoist": [
       "**/react",
+      "**/react/**",
+      "**/react-*",
+      "**/react-*/**",
       "**/react-native",
       "**/react-native-*",
       "**/react-native/**",
@@ -22,6 +25,7 @@
     ]
   },
   "scripts": {
+    "start": "lerna run --parallel start",
     "type": "tsc --noEmit --composite false",
     "lint": "eslint \"**/*.{js,ts,tsx}\""
   },
@@ -45,6 +49,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
+    "lerna": "^4.0.0",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "typescript": "^4.4.2"
