--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
       "**/lodash*",
       "**/lodash",
       "**/express",
-      "**/dotenv"
+      "**/dotenv",
+      "**/axios",
+      "**/cors",
+      "**/antd",
+      "**/pixi.js",
+      "**/@inlet/react-pixi"
     ]
   },
   "scripts": {
@@ -34,6 +39,8 @@
   "license": "ISC",
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "commitlint": "^16.2.1",
